2002-03-27  Paul Eggert  <eggert@twinsun.com>

	* lib/m4sugar/m4sh.m4 (_AS_BASENAME_PREPARE): New macro.
	(AS_SHELL_SANITIZE): Invoke it.
	(AS_BASENAME): AS_REQUIRE it, and use $as_basename.

2002-03-26  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Portable Shell): Add pointers to FAQs.

2002-03-26  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Introduction): The GNATS base moved.

2002-03-25  Paul Eggert  <eggert@twinsun.com>

	* tests/m4sh.at: Don't rely on "PATH=test:$PATH test-1" working
	as POSIX requires, as it doesn't work with Zsh.
	* doc/autoconf.texi (Assignments): Document the problem.

2002-03-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* doc/autoconf.texi (Limitations of Make): Mention more issue
	about VPATH, overriding of macros in sub-makes, and handling of
	SHELL.

2002-03-21  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Here-Documents): Mention Solaris 8 dtksh
	problem with here-document buffer boundaries.

	* lib/m4sugar/m4sh.m4 (_AS_LINENO_PREPARE): Unset ENV and BASH_ENV
	when reinvoking the shell, to work around problems with installers
	who put strange things like "cd" commands in their environments.

2002-03-19  Akim Demaille  <akim@epita.fr>

	* tests/semantics.at (AC_C_BIGENDIAN): s/unknow/unknown/.
	From Aaron Ucko.

2002-03-19  Akim Demaille  <akim@epita.fr>

	* bin/autoscan.in (scan_file): Specify the location in `&used'
	invocations.
	From Nicolas Joly.

2002-03-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Adjust @code/@command, @xref/@ref usage.
	From Nishio Futoshi.

2002-03-19  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_define_default, m4_fst, m4_map): New.

2002-03-18  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Programming in M4sh): Add AS_MKDIR_P.
	(Limitations of Usual Tools): Add mkdir section.

	* lib/m4sugar/m4sh.m4 (_AS_MKDIR_P_PREPARE): New macro.
	(AS_MKDIR_P): Require it.  Use mkdir -p if available, falling